force-app/main/default/objects/FinServ__IndustriesAppConfig__c/FinServ__IndustriesAppConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Industries Application Config</label>
</CustomObject>