force-app/main/default/objects/FinServ__IndustriesAppConfig__c/fields/FinServ__AccountNameFormat__c.field-meta.xml
<CustomField>
    <fullName>FinServ__AccountNameFormat__c</fullName>
    <defaultValue>&quot;{firstname} {lastname}&quot;</defaultValue>
    <description>Define an individual&#39;s account name format</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>By default, account names are displayed: {firstname} {lastname}. To change the order, enter: {lastname} {firstname}</inlineHelpText>
    <label>Account Name Format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>