force-app/main/default/objects/FinServ__IndustriesAppConfig__c/fields/FinServ__AppName__c.field-meta.xml
<CustomField>
    <fullName>FinServ__AppName__c</fullName>
    <description>Reserved for Salesforce internal use</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Application Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>