force-app/main/default/objects/FinServ__IndustriesAppConfig__c/fields/FinServ__MultipleRelationshipGroups__c.field-meta.xml
<CustomField>
    <fullName>FinServ__MultipleRelationshipGroups__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Enables a contact to be a member or related member of multiple relationship groups.</description>
    <label>Multiple Relationship Groups</label>
    <type>Checkbox</type>
</CustomField>