force-app/main/default/objects/FinServ__IndustriesAppConfig__c/fields/FinServ__SyncIndividualSystemFields__c.field-meta.xml
<CustomField>
    <fullName>FinServ__SyncIndividualSystemFields__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates whether Account and Contact system fields are kept in sync when an insert is performed on either entity.</description>
    <inlineHelpText
  >Sync Account and Contact fields when records are created in the individual object model.</inlineHelpText>
    <label>Sync Individual System Fields</label>
    <type>Checkbox</type>
</CustomField>